--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "numeral": "^2.0.6",
+    "nuqs": "^1.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "valtio": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
